--- a/reset.css
+++ b/reset.css
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AluraBooks</title>
-            <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1>AluraBooks</h1>
-    </body>
-</html>:root {
-    --cor-de-fundo: #EBECEE;
-}body {
-    background-color: var(--cor-de-fundo);
-}h1 {
-    background-color: white;
-}/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+
 
 html,
 body,
@@ -146,23 +125,6 @@ q:after {
   content: '';
   content: none;
 }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AluraBooks</title>
-<link rel=”stylesheet” href=”reset.css”>
-<link rel=”stylesheet” href=”styles.css”>
-</head>/* http://meyerweb.com/eric/tools/css/reset/
-v2.0 | 20110126
-License: none (public domain)
-*/
-
-html,
-body,
 div,
 span,
 applet,
@@ -282,12 +244,19 @@ quotes: none;
 blockquote:before,
 blockquote:after,
 q:before,
-q:after {
-content: '';
-content: none;
+q:after .lista-menu {
+  display: none;
+}.container__botao:checked ~ .lista-menu {
+  display: block;
 }
-
-table {
-border-collapse: collapse;
-border-spacing: 0;
+.cabecalho {
+  background-color: var(--branco);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}.lista-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
 }
