--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,6 @@
 
 body {
     background-color: var(--cor-de-fundo);
-}:root {
-    --cor-de-fundo: #EBECEE;
-}
-
-body {
-    background-color: var(--cor-de-fundo);
 }
 
 h1 {
@@ -56,7 +50,41 @@ h1 {
 body {
     background-color: var(--cor-de-fundo);
 }
+<_________ class="cabecalho">
+<a _________="index.html">
+    <_________ src="logo.svg" alt="Logo da AluraBooks">
+</a>        
+<_________>/* código omitido */
 
-h1 {
-    background-color: white;
+:root {
+
+/* código omitido */
+
+    --laranja: #EB9B00;
 }
+
+/* código omitido *//* código omitido */
+
+:root {
+
+    /* código omitido */
+    
+        --laranja: #EB9B00;
+        --azul-degrade:linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    }
+    
+    /* código omitido */:root {
+  --cor-de-fundo: #ebecee;
+  --branco: #ffffff;
+  --laranja: #eb9b00;
+}--azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);:root {
+    --cor-de-fundo: #ebecee;
+    --branco: #ffffff;
+    --laranja: #eb9b00;
+    --azul-degrade: linear-gradient(97.54deg, #002f52 35.49%, #326589 165.37%);
+  }.lista-menu {
+    display: none;
+    position: absolute;
+    _______: _______;
+    _______: _______;
+}border-radius: 0 0 20px 20px;
